sous-partie testing

--- a/extreme_programming.tex
+++ b/extreme_programming.tex
@@ -57,6 +57,10 @@ $\longrightarrow$ Mesure de la vitesse du projet : travail effectué durant une 
 
 \begin{frame}
 \frametitle{\insertsubsection : Validation}
+\item Tests automatiques des fonctionnalités demandées par le client(définies par le client).
+\item Tests unitaires de non-régression pour chaque portion de code.
+$\longrightarrow$ créés en amont de l'implémentation, gérés par un framework dédié, lancés à chaque compilation.
+\item $\Rightarrow$ Erreurs facilement détectables ; on peut s'assurer du fonctionnement global du système.
 
 \end{frame}
 
