--- a/extreme_programming.tex
+++ b/extreme_programming.tex
@@ -73,11 +73,12 @@ $\longrightarrow$  développement parallèle, publication séquentielle
 
 \begin{frame}
 \frametitle{\insertsubsection : Validation}
+\begin{itemize}
 \item Tests automatiques des fonctionnalités demandées par le client(définies par le client).
 \item Tests unitaires de non-régression pour chaque portion de code.
 $\longrightarrow$ créés en amont de l'implémentation, gérés par un framework dédié, lancés à chaque compilation.
 \item $\Rightarrow$ Erreurs facilement détectables ; on peut s'assurer du fonctionnement global du système.
-
+\end{itemize}
 \end{frame}
 
 \subsection{Avantages/Inconvénients}
