--- a/presentation.tex
+++ b/presentation.tex
@@ -6,11 +6,9 @@
 \usepackage[frenchb]{babel}
 
 
-
-
 \usetheme{Warsaw}
 
-\title{Agile and extreme programming}
+\title{Méthodes agiles et extreme programming}
 
 \begin{document}
 
