--- a/extreme_programming.tex
+++ b/extreme_programming.tex
@@ -1,6 +1,24 @@
+\begin{frame}
+\tableofcontents
 
-    \begin{frame}
+\end{frame}
+    
+\subsection{Origines et histoire}
+\begin{frame}
+\frametitle{\insertsubsection}
+\end{frame}
 
-    Extreme programming
+\subsection{Valeurs}
+\begin{frame}
+\frametitle{\insertsubsection}
+\end{frame}
 
-    \end{frame}
+\subsection{Principes généraux}
+\begin{frame}
+\frametitle{\insertsubsection}
+\end{frame}
+
+\subsection{Avantages/Inconvénients}
+\begin{frame}
+\frametitle{\insertsubsection}
+\end{frame}
