--- a/presentation.tex
+++ b/presentation.tex
@@ -5,7 +5,7 @@
 
 \usepackage[T1]{fontenc}
 
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 
 
 \usetheme{Warsaw}
@@ -21,8 +21,10 @@
 
     \end{frame}
     
+    \section{Méthodes agiles}
     \input{agile_programming.tex}
-
+	
+	\section{Extreme programming}
     \input{extreme_programming.tex}
 
 \end{document}
