Sous parties Principes généraux

--- a/extreme_programming.tex
+++ b/extreme_programming.tex
@@ -15,7 +15,28 @@
 
 \subsection{Principes généraux}
 \begin{frame}
-\frametitle{\insertsubsection}
+\frametitle{\insertsubsection : Planification}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{\insertsubsection : Management}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{\insertsubsection : Conception}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{\insertsubsection : Implémentation}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{\insertsubsection : Validation}
+
 \end{frame}
 
 \subsection{Avantages/Inconvénients}
